fix lint, and prepare prod

--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -45,8 +45,8 @@ spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
     url: jdbc:postgresql://localhost:5432/vnuaServer
-    username: vnuaServer
-    password:
+    username: postgres
+    password: gfdgfd
     hikari:
       poolName: Hikari
       auto-commit: false
